# ancient-pilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ancient_pilot/: __init__.py  __main__.py  cli.py  config.py
